--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6279,7 +6279,7 @@
                     <th style="width: 3em;">Probe</th>
                 </tr>
             </table>
-            <fieldset class="repeating_Metatalente">
+            <fieldset class="repeating_Metatalente201904">
                 <span style="display: inline-block; width: 23em">
                     <select name="attr_Name_Metatalent" class="atype" style="width: 10em;">
                         <option value="ansitzjagd">Ansitzjagd</option>
@@ -12868,6 +12868,56 @@
             <input type="number" name="attr_TaW" style="width: 3em;">
             <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{TalentName}}} {{mod=[[?{Erleichterung (−) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{Eigenschaft1}]]}} {{stat2=[[@{Eigenschaft2}]]}} {{stat3=[[@{Eigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (−) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
         </fieldset>
+        <h5>Metatalente</h5>
+        <fieldset class="repeating_MetaTalente">
+            <input type="checkbox" name="attr_SE" style="width: 2em">
+            <select name="attr_TalentName" class="atype" style="width: 14em;">
+                <option>---</option>
+                <option>Pirschjagd</option>
+                <option>Ansitzjagd</option>
+                <option>Hetzjagd</option>
+                <option>Speerfischen</option>
+                <option>Tierfallenstellen</option>
+                <option>Nahrungsammeln</option>
+                <option>Kräutersuchen</option>
+                <option>Wachehalten</option>
+            </select>
+            <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
+                <option>---</option>
+                <option value="@{MU}">MU</option>
+                <option value="@{KL}">KL</option>
+                <option value="@{IN}">IN</option>
+                <option value="@{CH}">CH</option>
+                <option value="@{FF}">FF</option>
+                <option value="@{GE}">GE</option>
+                <option value="@{KO}">KO</option>
+                <option value="@{KK}">KK</option>
+            </select>
+            <select name="attr_Eigenschaft2" class="sheet-talent-eigenschaft">
+                <option>---</option>
+                <option value="@{MU}">MU</option>
+                <option value="@{KL}">KL</option>
+                <option value="@{IN}">IN</option>
+                <option value="@{CH}">CH</option>
+                <option value="@{FF}">FF</option>
+                <option value="@{GE}">GE</option>
+                <option value="@{KO}">KO</option>
+                <option value="@{KK}">KK</option>
+            </select>
+            <select name="attr_Eigenschaft3" class="sheet-talent-eigenschaft">
+                <option>---</option>
+                <option value="@{MU}">MU</option>
+                <option value="@{KL}">KL</option>
+                <option value="@{IN}">IN</option>
+                <option value="@{CH}">CH</option>
+                <option value="@{FF}">FF</option>
+                <option value="@{GE}">GE</option>
+                <option value="@{KO}">KO</option>
+                <option value="@{KK}">KK</option>
+            </select>
+            <input type="number" name="attr_TaW" style="width: 3em;">
+            <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{TalentName}}} {{mod=[[?{Erleichterung (−) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{Eigenschaft1}]]}} {{stat2=[[@{Eigenschaft2}]]}} {{stat3=[[@{Eigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (−) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
+        </fieldset>
     </div>
 
 
@@ -15624,10 +15674,10 @@ on("change:repeating_Gaben:Name_Gabe change:repeating_Gaben:Name_Gabe_Zusatz", f
     });
 });
 
-on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Name_Metatalent_Eigen", function(eventInfo) {
-    getAttrs(["repeating_metatalente_Name_Metatalent", "repeating_metatalente_Name_Metatalent_Eigen"], function(v) {
-        let metatalent = v.repeating_metatalente_Name_Metatalent;
-        let metatalentEigen = v.repeating_metatalente_Name_Metatalent_Eigen;
+on("change:repeating_Metatalente201904:Name_Metatalent change:repeating_Metatalente201904:Name_Metatalent_Eigen", function(eventInfo) {
+    getAttrs(["repeating_Metatalente201904_Name_Metatalent", "repeating_Metatalente201904_Name_Metatalent_Eigen"], function(v) {
+        let metatalent = v.repeating_Metatalente201904_Name_Metatalent;
+        let metatalentEigen = v.repeating_Metatalente201904_Name_Metatalent_Eigen;
         let metatalente = {
             "ansitzjagd": [ ["mu", "in", "ge"], "Ansitzjagd" ],
             "hetzjagd": [ ["mu", "in", "ge"], "Hetzjagd" ],
@@ -15640,10 +15690,10 @@ on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Na
         };
         if (metatalent != "nothing")  {
             setAttrs({
-                'repeating_metatalente_eigenschaft1': metatalente[metatalent][0][0],
-                'repeating_metatalente_eigenschaft2': metatalente[metatalent][0][1],
-                'repeating_metatalente_eigenschaft3': metatalente[metatalent][0][2],
-                'repeating_metatalente_Name_Metatalent_Anzeige': metatalente[metatalent][1]
+                'repeating_Metatalente201904_eigenschaft1': metatalente[metatalent][0][0],
+                'repeating_Metatalente201904_eigenschaft2': metatalente[metatalent][0][1],
+                'repeating_Metatalente201904_eigenschaft3': metatalente[metatalent][0][2],
+                'repeating_Metatalente201904_Name_Metatalent_Anzeige': metatalente[metatalent][1]
             });
         } else {
             let update = {};
@@ -15668,13 +15718,13 @@ on("change:repeating_Gaben:eigenschaft1 change:repeating_Gaben:eigenschaft2 chan
     });
 });
 
-on("change:repeating_metatalente:eigenschaft1 change:repeating_metatalente:eigenschaft2 change:repeating_metatalente:eigenschaft3", function(eventInfo) {
-    getAttrs(["repeating_metatalente_eigenschaft1", "repeating_metatalente_eigenschaft2", "repeating_metatalente_eigenschaft3", "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"], function(v) {
+on("change:repeating_Metatalente201904:eigenschaft1 change:repeating_Metatalente201904:eigenschaft2 change:repeating_Metatalente201904:eigenschaft3", function(eventInfo) {
+    getAttrs(["repeating_Metatalente201904_eigenschaft1", "repeating_Metatalente201904_eigenschaft2", "repeating_Metatalente201904_eigenschaft3", "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"], function(v) {
             let attributes = {"mu": +v.mu, "kl": +v.kl, "in": +v.in, "ch": +v.ch, "ff": +v.ff, "ge": +v.ge, "ko": +v.ko, "kk": +v.kk};
             setAttrs({
-                'repeating_metatalente_hiddeneigenschaft1': attributes[v.repeating_metatalente_eigenschaft1] || 0,
-                'repeating_metatalente_hiddeneigenschaft2': attributes[v.repeating_metatalente_eigenschaft2] || 0,
-                'repeating_metatalente_hiddeneigenschaft3': attributes[v.repeating_metatalente_eigenschaft3] || 0
+                'repeating_Metatalente201904_hiddeneigenschaft1': attributes[v.repeating_Metatalente201904_eigenschaft1] || 0,
+                'repeating_Metatalente201904_hiddeneigenschaft2': attributes[v.repeating_Metatalente201904_eigenschaft2] || 0,
+                'repeating_Metatalente201904_hiddeneigenschaft3': attributes[v.repeating_Metatalente201904_eigenschaft3] || 0
             });
     });
 });
@@ -15698,12 +15748,12 @@ on("change:mu change:kl change:in change:ch change:ff change:ge change:ko change
         });
 
         // Aktualisiere Metatalente
-        getSectionIDs("metatalente", function(idarray) {
+        getSectionIDs("metatalente201904", function(idarray) {
              _.each(idarray, function(currentID, i) {
-                getAttrs(["repeating_metatalente_" + currentID + "_eigenschaft1", "repeating_metatalente_" + currentID + "_eigenschaft2", "repeating_metatalente_" + currentID + "_eigenschaft3"], function(v) {
-                    update["repeating_metatalente_" + currentID + "_hiddeneigenschaft1"] = attributes[v["repeating_metatalente_" + currentID + "_eigenschaft1"]];
-                    update["repeating_metatalente_" + currentID + "_hiddeneigenschaft2"] = attributes[v["repeating_metatalente_" + currentID + "_eigenschaft2"]];
-                    update["repeating_metatalente_" + currentID + "_hiddeneigenschaft3"] = attributes[v["repeating_metatalente_" + currentID + "_eigenschaft3"]];
+                getAttrs(["repeating_Metatalente201904_" + currentID + "_eigenschaft1", "repeating_Metatalente201904_" + currentID + "_eigenschaft2", "repeating_Metatalente201904_" + currentID + "_eigenschaft3"], function(v) {
+                    update["repeating_Metatalente201904_" + currentID + "_hiddeneigenschaft1"] = attributes[v["repeating_Metatalente201904_" + currentID + "_eigenschaft1"]];
+                    update["repeating_Metatalente201904_" + currentID + "_hiddeneigenschaft2"] = attributes[v["repeating_Metatalente201904_" + currentID + "_eigenschaft2"]];
+                    update["repeating_Metatalente201904_" + currentID + "_hiddeneigenschaft3"] = attributes[v["repeating_Metatalente201904_" + currentID + "_eigenschaft3"]];
                     setAttrs(update);
                 });
             });
