* Remove misleading and troubling attribute 'INI_max' * Restructure calculation of 'INIBasis2' to be independent of 'INI_max'

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -254,7 +254,6 @@
                 <td>INI-Basiswert</td>
                 <td><input type="text" class="sheet-stat-immutable" name="attr_INIBasis" value="0" readonly="readonly"></td>
                 <td><input name="attr_INIZugeK" style="width: 2em;" type="number" value="0"></td>
-                <td><input type="text" class="sheet-stat-immutable" name="attr_INI_max" value="0" readonly="readonly"></td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
@@ -11163,7 +11162,7 @@
                         <input class="sheet-stat-immutable" disabled="disabled" type="text" name="attr_GS_Wert" style="width: 2em" value="@{GS}">
                     </th>
                     <th>IB
-                        <input class="sheet-stat-immutable" disabled="true" type="text" name="attr_INIBasis2" style="width: 3em" value="@{INI_max}">
+                        <input class="sheet-stat-immutable" readonly="readonly" type="text" name="attr_INIBasis2" style="width: 3em" value="0">
                     </th>
                     <th>BE <input class="sheet-stat-immutable" disabled="disabled" type="text" name="attr_Ges_BE_Anzeige" value="@{BE_TaW}" style="width: 2em">
                     </th>
@@ -15616,11 +15615,11 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
             'mr_max': Math.round((+v.mu_basis + +v.kl_basis + +v.ko_basis) / 5) + +v.mrzugek,
             'ueberanstrengung_max': +v.ko_basis,
             'inibasis': Math.round((+v.mu_basis + +v.mu_basis + +v.in_basis + +v.ge_basis) / 5),
-            'ini_max': Math.round((+v.mu_basis + +v.mu_basis + +v.in_basis + +v.ge_basis) / 5) + +v.inizugek - wundeKopf - wundeBauch - wundeLB - wundeRB,
             'atbasis': Math.round(((+v.mu_basis + +v.ge_basis + +v.kk_basis) / 5) - wundeBauch - wundeRA - wundeLA - wundeRB - wundeLB),
             'pabasis': Math.round(((+v.in_basis + +v.ge_basis + +v.kk_basis) / 5) - wundeBrust - wundeBauch - wundeRA - wundeLA - wundeRB - wundeLB),
             'fkbasis': Math.round(((+v.in_basis + +v.ff_basis + +v.kk_basis) / 5) - wundeBrust - wundeBauch - wundeRA - wundeLA - wundeRB - wundeLB)
         };
+        update['inibasis2'] = update['inibasis'] + +v.inizugek - wundeKopf - wundeBauch - wundeLB - wundeRB;
         let GS = {
             'Basis': +v.gs_basis,
             'Mod': +v.gs_mod,
