* Fix: Handle gift/meta-talent "TaW" not set
Since this is the last commit regarding gifts/meta-talents:
* Fixes kreuvf/roll20-character-sheets#1
* Fixes kreuvf/roll20-character-sheets#22
* Relates to kreuvf/roll20-character-sheets#28

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -15857,6 +15857,7 @@ function migrate20171014to20190425 () {
                     "Zwergennase": "zwergennase",
                 };
                 let gaben = {
+                    "nothing": [ ["---", "---", "---"], "nothing" ],
                     "empathie": [ ["mu", "in", "in"], "Empathie" ],
                     "gefahreninstinkt": [ ["kl", "in", "in"], "Gefahreninstinkt" ],
                     "geraeuschhexerei": [ ["in", "ch", "ko"], "Geräuschhexerei" ],
@@ -15878,6 +15879,7 @@ function migrate20171014to20190425 () {
                             "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"
                         ], function(v) {
                             console.log(v);
+                            let defaultTaW = 3;
                             let update = {};
                             let newrow = generateRowID();
                             let current = Object.keys(v)[0].split("_")[2];
@@ -15911,7 +15913,11 @@ function migrate20171014to20190425 () {
                             update[prefixNew + "_hiddenEigenschaft1"] = v[conversion[v[prefixOld + "_Eigenschaft1"]]];
                             update[prefixNew + "_hiddenEigenschaft2"] = v[conversion[v[prefixOld + "_Eigenschaft2"]]];
                             update[prefixNew + "_hiddenEigenschaft3"] = v[conversion[v[prefixOld + "_Eigenschaft3"]]];
-                            update[prefixNew + "_TaW"] = parseInt(v[prefixOld + "_TaW"]);
+                            if(v[prefixOld + "_TaW"] === "") {
+                                update[prefixNew + "_TaW"] = defaultTaW;
+                            } else {
+                                update[prefixNew + "_TaW"] = parseInt(v[prefixOld + "_TaW"]);
+                            }
                             console.log(update);
 
                             // Create new row
@@ -15969,6 +15975,7 @@ function migrate20171014to20190425 () {
                             "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"
                         ], function(v) {
                             console.log(v);
+                            let defaultTaW = 0;
                             let update = {};
                             let newrow = generateRowID();
                             let current = Object.keys(v)[0].split("_")[2];
@@ -16002,7 +16009,11 @@ function migrate20171014to20190425 () {
                             update[prefixNew + "_hiddenEigenschaft1"] = v[conversion[v[prefixOld + "_Eigenschaft1"]]];
                             update[prefixNew + "_hiddenEigenschaft2"] = v[conversion[v[prefixOld + "_Eigenschaft2"]]];
                             update[prefixNew + "_hiddenEigenschaft3"] = v[conversion[v[prefixOld + "_Eigenschaft3"]]];
-                            update[prefixNew + "_TaW"] = parseInt(v[prefixOld + "_TaW"]);
+                            if(v[prefixOld + "_TaW"] === "") {
+                                update[prefixNew + "_TaW"] = defaultTaW;
+                            } else {
+                                update[prefixNew + "_TaW"] = parseInt(v[prefixOld + "_TaW"]);
+                            }
                             console.log(update);
 
                             // Create new row
