--- a/StarWars5E/StarWars5E_HTML.html
+++ b/StarWars5E/StarWars5E_HTML.html
@@ -952,7 +952,7 @@
                         <option value="Monk" data-i18n="monk">Monk</option>
                         <option value="Guardian" data-i18n="guardian">Guardian</option>
                         <option value="Scout" data-i18n="scout">Scout</option>
-                        <option value="Infiltrator" data-i18n="infiltrator">Infiltrator</option>
+                        <option value="Operative" data-i18n="operative">Operative</option>
                         <option value="Sentinel" data-i18n="sentinel">Sentinel</option>
                         <option value="Consular" data-i18n="consular">Consular</option>
                     </select>
@@ -3648,7 +3648,7 @@
                         <option value="Monk" data-i18n="monk">Monk</option>
                         <option value="Guardian" data-i18n="guardian">Guardian</option>
                         <option value="Scout" data-i18n="scout">Scout</option>
-                        <option value="Infiltrator" data-i18n="infiltrator">Infiltrator</option>
+                        <option value="Operative" data-i18n="operative">Operative</option>
                         <option value="Sentinel" data-i18n="sentinel">Sentinel</option>
                         <option value="Consular" data-i18n="consular">Consular</option>
                     </select>
@@ -3738,8 +3738,8 @@
                         <span data-i18n="tech-fighter-u">TECH FIGHTER</span>
                     </div>
                     <div class="row">
-                        <input type="checkbox" name="attr_tech_infiltrator" value="1">
-                        <span data-i18n="tech-infiltrator-u">TECH INFILTRATOR</span>
+                        <input type="checkbox" name="attr_tech_operative" value="1">
+                        <span data-i18n="tech-operative-u">TECH OṔERATIVE</span>
                     </div>
                     <div class="row title">
                         <span data-i18n="class-options-u">CLASS OPTIONS</span>
@@ -3757,7 +3757,7 @@
                             <option value="monk" data-i18n="monk">Monk</option>
                             <option value="guardian" data-i18n="guardian">Guardian</option>
                             <option value="scout" data-i18n="scout">Scout</option>
-                            <option value="infiltrator" data-i18n="infiltrator">Infiltrator</option>
+                            <option value="operative" data-i18n="operative">Operative</option>
                             <option value="sentinel" data-i18n="sentinel">Sentinel</option>
                             <option value="consular" data-i18n="consular">Consular</option>
                         </select>
@@ -3777,7 +3777,7 @@
                             <option value="monk" data-i18n="monk">Monk</option>
                             <option value="guardian" data-i18n="guardian">Guardian</option>
                             <option value="scout" data-i18n="scout">Scout</option>
-                            <option value="infiltrator" data-i18n="infiltrator">Infiltrator</option>
+                            <option value="operative" data-i18n="operative">Operative</option>
                             <option value="sentinel" data-i18n="sentinel">Sentinel</option>
                             <option value="consular" data-i18n="consular">Consular</option>
                         </select>
@@ -3797,7 +3797,7 @@
                             <option value="monk" data-i18n="monk">Monk</option>
                             <option value="guardian" data-i18n="guardian">Guardian</option>
                             <option value="scout" data-i18n="scout">Scout</option>
-                            <option value="infiltrator" data-i18n="infiltrator">Infiltrator</option>
+                            <option value="operative" data-i18n="operative">Operative</option>
                             <option value="sentinel" data-i18n="sentinel">Sentinel</option>
                             <option value="consular" data-i18n="consular">Consular</option>
                         </select>
@@ -3847,7 +3847,7 @@
                             <option value="none" data-i18n="none-u">NONE</option>
                             <option value="full" data-i18n="power-full-u">FULL (Engineer, Druid, Consular)</option>
                             <option value="half" data-i18n="power-half-u">HALF (Guardian, Scout)</option>
-                            <option value="third" data-i18n="power-third-u">THIRD (Tech Fighter/Infiltrator)</option>
+                            <option value="third" data-i18n="power-third-u">THIRD (Tech Fighter/Operative)</option>
                         </select>
                     </div>
                     <div class="row">
@@ -7136,7 +7136,7 @@
         });
     });
 
-    on("change:base_level change:multiclass1_flag change:multiclass1 change:multiclass1_lvl change:multiclass2_flag change:multiclass2 change:multiclass2_lvl change:multiclass3_flag change:multiclass3 change:multiclass3_lvl change:tech_fighter change:tech_infiltrator", function(eventinfo) {
+    on("change:base_level change:multiclass1_flag change:multiclass1 change:multiclass1_lvl change:multiclass2_flag change:multiclass2 change:multiclass2_lvl change:multiclass3_flag change:multiclass3 change:multiclass3_lvl change:tech_fighter change:tech_operative", function(eventinfo) {
         if(eventinfo.sourceType && eventinfo.sourceType === "sheetworker") {
             return;
         }
@@ -10535,7 +10535,7 @@
                         update["charisma_save_prof"] = 0;
                         update["class_resource_name"] = "";
                         break;
-                    case "Infiltrator":
+                    case "Operative":
                         update["hitdietype"] = 8;
                         update["powercasting_ability"] = "0*";
                         update["strength_save_prof"] = 0;
@@ -10629,7 +10629,7 @@
     };
 
     var set_level = function() {
-        getAttrs(["base_level","multiclass1_flag","multiclass2_flag","multiclass3_flag","multiclass1_lvl","multiclass2_lvl","multiclass3_lvl","class","multiclass1","multiclass2","multiclass3", "tech_fighter", "tech_infiltrator", "custom_class", "cust_powerslots", "cust_classname", "level_calculations", "class", "subclass", "multiclass1_subclass","multiclass2_subclass","multiclass3_subclass"], function(v) {
+        getAttrs(["base_level","multiclass1_flag","multiclass2_flag","multiclass3_flag","multiclass1_lvl","multiclass2_lvl","multiclass3_lvl","class","multiclass1","multiclass2","multiclass3", "tech_fighter", "tech_operative", "custom_class", "cust_powerslots", "cust_classname", "level_calculations", "class", "subclass", "multiclass1_subclass","multiclass2_subclass","multiclass3_subclass"], function(v) {
             var update = {};
             var callbacks = [];
             var multiclass = (v.multiclass1_flag && v.multiclass1_flag === "1") || (v.multiclass2_flag && v.multiclass2_flag === "1") || (v.multiclass3_flag && v.multiclass3_flag === "1") ? true : false;
@@ -10668,7 +10668,7 @@
                 class_display = class_display + ", " + subclass + v.multiclass3 + " " + multiclasslevel;
             };
 
-            var casterlevel = checkCasterLevel(classes, v["tech_fighter"], v["tech_infiltrator"]);
+            var casterlevel = checkCasterLevel(classes, v["tech_fighter"], v["tech_operative"]);
 
             update["hitdie_final"] = multiclass ? hitdie_final + "}" : hitdie_final;
             update["level"] = finallevel;
@@ -10684,11 +10684,11 @@
         });
     };
 
-    var isMultiCaster = function(classes, tech_fighter, tech_infiltrator) {
+    var isMultiCaster = function(classes, tech_fighter, tech_operative) {
         var singlecaster = false;
         var multicaster = false;
         _.each(classes, function(multiclass) {
-            var caster = getCasterType(multiclass[0], multiclass[1], tech_fighter, tech_infiltrator) > 0;
+            var caster = getCasterType(multiclass[0], multiclass[1], tech_fighter, tech_operative) > 0;
             if(caster && singlecaster) {
                 multicaster = true;
             } else if(caster) {
@@ -10698,26 +10698,26 @@
         return multicaster;
     };
 
-    var getCasterType = function(class_string, levels, tech_fighter, tech_infiltrator) {
+    var getCasterType = function(class_string, levels, tech_fighter, tech_operative) {
         var full = ["scholar","engineer","druid","sorcerer","consular","full"];
         var half = ["guardian","scout","half"];
         if(full.indexOf(class_string) != -1) {
             return 1;
         } else if(half.indexOf(class_string) != -1) {
             return (levels == 1) ? 0 : (1/2);
-        } else if(class_string === "third" || (class_string === "fighter" && tech_fighter === "1") || (class_string === "infiltrator" && tech_infiltrator === "1")) {
+        } else if(class_string === "third" || (class_string === "fighter" && tech_fighter === "1") || (class_string === "operative" && tech_operative === "1")) {
             return (levels == 1 || levels == 2) ? 0 : (1/3);
         } else {
             return 0;
         }
     };
 
-    var checkCasterLevel = function(classes, tech_fighter, tech_infiltrator) {
+    var checkCasterLevel = function(classes, tech_fighter, tech_operative) {
         console.log("CHECKING CASTER LEVEL");
-        var multicaster = isMultiCaster(classes, tech_fighter, tech_infiltrator);
+        var multicaster = isMultiCaster(classes, tech_fighter, tech_operative);
         var totalcasterlevel = 0;
         _.each(classes, function(multiclass) {
-            var casterlevel = parseInt(multiclass[1], 10) * getCasterType(multiclass[0], multiclass[1], tech_fighter, tech_infiltrator);
+            var casterlevel = parseInt(multiclass[1], 10) * getCasterType(multiclass[0], multiclass[1], tech_fighter, tech_operative);
             // Characters with multiple powercasting classes round down the casting level for that class
             // Character with a single powercasting class round up the casting level
             totalcasterlevel = totalcasterlevel + (multicaster ? Math.floor(casterlevel) : Math.ceil(casterlevel));
@@ -10727,7 +10727,7 @@
 
     var checkHitDie = function(class_string) {
         var d10class = ["fighter","guardian","scout"];
-        var d8class = ["scholar","engineer","druid","monk","infiltrator","sentinel"];
+        var d8class = ["scholar","engineer","druid","monk","operative","sentinel"];
         var d6class = ["sorcerer","consular"];
         if(class_string === "berzerker") {return "12"}
         else if (d10class.indexOf(class_string) != -1) {return "10"}
