Hc Svnt Dracones 2E: v.1.55 main stats update from xp table

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -43,14 +43,14 @@
   <div class="attrs section flex-col-wrap">
 
     <label class="titel">Mind</label>
-    <label><input type="number" name="attr_mind_exert"    value="1"> Exert</label>
-    <label><input type="number" name="attr_mind_perceive" value="1"> Perceive</label>
+    <label><input type="number" name="attr_mind_exert"    value=""> Exert</label>
+    <label><input type="number" name="attr_mind_perceive" value=""> Perceive</label>
     <label class="titel">Body </label>
-    <label><input type="number" name="attr_body_exert"    value="1"> Exert</label>
-    <label><input type="number" name="attr_body_perceive" value="1"> Perceive</label>
+    <label><input type="number" name="attr_body_exert"    value=""> Exert</label>
+    <label><input type="number" name="attr_body_perceive" value=""> Perceive</label>
     <label class="titel">Community</label>
-    <label><input type="number" name="attr_community_exert"    value="1"> Exert</label>
-    <label><input type="number" name="attr_community_perceive" value="1"> Perceive</label>
+    <label><input type="number" name="attr_community_exert"    value=""> Exert</label>
+    <label><input type="number" name="attr_community_perceive" value=""> Perceive</label>
 
     
     <div style="margin-top:10px;">
@@ -1025,7 +1025,15 @@
 
 const int = score => parseInt(score, 10) || 0;
 
-//const stat = ["mind_stat","mind_perceive","body_stat", "body_perceive","community_stat","community_perceive"];
+
+const xp_mind_stat = ["mind_stat1","mind_stat2","mind_stat3","mind_stat4","mind_stat5"];
+const xp_mind_perceive = ["mind_perceive1","mind_perceive2","mind_perceive3","mind_perceive4","mind_perceive5",];
+const xp_body_stat = ["body_stat1","body_stat2","body_stat3","body_stat4","body_stat",];
+const xp_body_perceive = ["body_perceive1","body_perceive2","body_perceive3","body_perceive4","body_perceive5"];
+const xp_community_stat = ["community_stat1","community_stat2","community_stat3","community_stat4","community_stat5"];
+const xp_community_perceive = ["community_perceive1","community_perceive2","community_perceive3","community_perceive4","community_perceive5"];
+
+
 
 //const counter = ["1","2a","2b", "3a", "3b", "4", "5a","5b", "6a","6b", "7", "8a","8b", "9a","9b", "10", "11a","11b", "12a","12b", "13"];
 
@@ -1042,7 +1050,6 @@ const xp25a = ["mind_stat10", "mind_stat11a","mind_stat11b", "mind_stat12a","min
 
 const xp30a = ["mind_stat13","mind_perceive13","body_stat13", "body_perceive13","community_stat13","community_perceive13"];
 
-//const progressiontracker = ["boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track"];
 
 const boonstracker = ["body_stat6b","body_stat9a", "body_perceive2b", "body_perceive6b", "body_perceive11b"];
 
@@ -1065,7 +1072,7 @@ const creditstracker = ["community_stat3a","community_stat9b","community_stat3a"
 checkboxes.forEach(checkbox => {
     on(`change:${checkbox}`, (eventInfo) => {
         console.log("checkbox changed:" + checkbox);
-        let xplist = [ checkbox, "exp_total", "exp_spent", "exp", "boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track", "credits", "progression_credits_track"];
+        let xplist = [ checkbox, "exp_total", "exp_spent", "exp", "boons_track", "focus_track", "readiness_track", "profs_track", "move_track", "init_track", "techniques_track", "notoriety_track", "credits", "progression_credits_track", "mind_exert","mind_perceive", "body_exert","body_perceive", "community_exert","community_perceive"];
         console.log(xplist);
         getAttrs(xplist, values => {
             let xp_total = int(values["exp_total"]);
@@ -1226,6 +1233,74 @@ checkboxes.forEach(checkbox => {
               console.log("Progression Credit Instances Purchased: " + credits_tracker + " for a total of " + credits + " credits.");
             }
 
+            //Stat increases
+            let mind_exert = int(values["mind_exert"]);
+            let mind_perceive = int(values["mind_perceive"]);
+            let body_exert = int(values["body_exert"]);
+            let body_perceive = int(values["body_perceive"]);
+            let community_exert = int(values["community_exert"]);
+            let community_perceive = int(values["community_perceive"]);
+            //mind exert
+            else if (xp_mind_stat.includes(checkbox)){
+              if(stat === 1){
+                mind_exert = mind_exert + 1;
+              }
+              else{
+                mind_exert = mind_exert - 1;
+              }
+              console.log("Total 'mind_exert': " + mind_exert);
+            }
+            //mind perceive
+            else if (xp_mind_perceive.includes(checkbox)){
+              if(stat === 1){
+                mind_perceive = mind_perceive + 1;
+              }
+              else{
+                mind_perceive = mind_perceive - 1;
+              }
+              console.log("Total 'mind_perceive': " + mind_perceive);
+            }
+            //body exert
+            else if (xp_body_stat.includes(checkbox)){
+              if(stat === 1){
+                body_exert = body_exert + 1;
+              }
+              else{
+                body_exert = body_exert - 1;
+              }
+              console.log("Total 'body_exert': " + body_exert);
+            }
+            //body perceive
+            else if (xp_body_perceive.includes(checkbox)){
+              if(stat === 1){
+                body_perceive = body_perceive + 1;
+              }
+              else{
+                body_perceive = body_perceive - 1;
+              }
+              console.log("Total 'body_perceive': " + body_perceive);
+            }
+            //community exert
+            else if (xp_community_stat.includes(checkbox)){
+              if(stat === 1){
+                community_exert = community_exert + 1;
+              }
+              else{
+                community_exert = community_exert - 1;
+              }
+              console.log("Total 'community_exert': " + community_exert);
+            }
+            //community perceive
+            else if (xp_community_perceive.includes(checkbox)){
+              if(stat === 1){
+                community_perceive = community_perceive + 1;
+              }
+              else{
+                community_perceive = community_perceive - 1;
+              }
+              console.log("Total 'community_perceive': " + community_perceive);
+            }
+
             setAttrs({
                 exp_spent: xp_spent,
                 exp: xp_current,
@@ -1238,7 +1313,13 @@ checkboxes.forEach(checkbox => {
                 readiness_track: readiness,
                 techniques_track: techniques,
                 credits: credits,
-                progression_credits_track: credits_tracker
+                progression_credits_track: credits_tracker,
+                mind_exert : mind_exert,
+                mind_perceive : mind_perceive,
+                body_exert : body_exert,
+                body_perceive : body_perceive,
+                community_exert : community_exert,
+                community_perceive : community_perceive
             });
         });
     });
